--- a/intentTEST/app/src/main/res/layout/activity_main.xml
+++ b/intentTEST/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="32dp"
         android:background="@color/colorPrimary"
         android:padding="10dp"
-        android:text="Button"
+        android:text="Sent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
