--- a/GIaodienmanhinh-Tuan1/app/src/main/res/layout/activity_signup.xml
+++ b/GIaodienmanhinh-Tuan1/app/src/main/res/layout/activity_signup.xml
@@ -7,10 +7,14 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <TextView
+        android:text="Sign Up"
+        android:textSize="50dp"
+        android:orientation="horizontal"
+        android:textColor="@android:color/white"
         android:id="@+id/circleImageView"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:src="@drawable/ic_user"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +38,7 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mật khẩu"
+            android:text="Nhập lại mật khẩu"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -48,10 +52,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout1"
         android:layout_width="300dp"
         android:layout_height="72dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +80,34 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="300dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="140dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
+        tools:ignore="MissingConstraints">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mật khẩu"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editMK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
@@ -86,10 +118,10 @@
         tools:ignore="MissingConstraints">
 
         <Button
-            android:id="@+id/bt_dangnhap"
+            android:id="@+id/bt_dangki"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Đăng nhập"
+            android:text="Đăng kí"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -115,7 +147,7 @@
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tạo tài khoản"
+            android:text="Đã có tài khoản"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="20dp"
